# adelaide-fringe-backend

./: .gitignore  CMakeLists.txt  DEPENDENCY_INSTALLATION_SUCCESS.md  Dockerfile  Dockerfile.test  EventAndTypes.md  README.md  autobuild.js  autobuild.sh  docker-compose.yml  entrypoint.sh  generate_config.sh  init_db.sql  local_test_report.sh  main.cpp  run_fixed_tests.sh  run_server_docker.sh  run_simple_test_docker.sh  run_tests.sh  run_tests_docker.sh  run_unit_tests.sh  run_working_tests.sh
.github/workflows/: main.yml
include/controller/: Controller.h
include/controller/cart/: CartController.h
include/controller/event/: EventController.h
include/controller/login/: LoginController.h
include/controller/order/: OrderController.h
include/controller/passwordreset/: PasswordResetController.h
include/controller/signout/: SignoutController.h
include/controller/signup/: SignupController.h
include/controller/ticket/: TicketController.h
include/controller/ticket_type/: TicketTypeController.h
include/controller/user/: UserController.h
include/exception/: ExceptionHandler.h  FileUploadException.h
include/middlewares/: AdelaideCORS.h  AuthAdminMiddleware.h  AuthMiddleware.h
include/service/: AuthService.h  EventService.h  LoginService.h  TicketService.h  UploadService.h  UserService.h
include/utils/: Config.h  DB.hpp  Hash.h  JWT.h  PostgresConnection.h  Singleton.h  response.h
src/controller/: Controller.cpp
src/controller/cart/: CartController.cpp
src/controller/event/: EventController.cpp
src/controller/login/: LoginController.cpp
src/controller/order/: OrderController.cpp
src/controller/passwordreset/: PasswordResetController.cpp
src/controller/signout/: SignoutController.cpp
src/controller/signup/: SignupController.cpp
src/controller/ticket/: TicketController.cpp
src/controller/ticket_type/: TicketTypeController.cpp
src/controller/user/: UserController.cpp
src/exception/: ExceptionHandler.cpp
src/service/: AuthService.cpp  EventService.cpp  LoginService.cpp  TicketService.cpp  UploadService.cpp  UserService.cpp
src/utils/: Config.cpp  Hash.cpp  JWT.cpp  PostgresConnection.cpp  Singleton.cpp  response.cpp  uuid.cpp
test_reports/: simple_test_report.html
tests/: CMakeLists.txt  main.cpp  run_all_tests.sh  simple_test.cpp  standalone_utils_test.cpp
tests/integration/: AuthFlowTest.cpp  CMakeLists.txt  EndToEndFlowTest.cpp  EventFlowTest.cpp  TestClient.h  TestEnv.cpp  TestEnv.h  TicketFlowTest.cpp
tests/test_results/: SUMMARY.txt  academic_summary.md  academic_test_report.html  simple_test.xml  standalone_utils_test.xml  test_config.json  test_report.html  unit_utils_only.xml
tests/unit/controller/: EventControllerTest.cpp  LoginControllerTest.cpp  SignupControllerTest.cpp  TicketControllerTest.cpp
tests/unit/service/: LoginServiceTest.cpp
tests/unit/utils/: ConfigTest.cpp  HashTest.cpp  JWTTest.cpp  MockPostgresConnection.h  PostgresConnectionTest.cpp  UUIDTest.cpp
